correction mobile filtresv3

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -203,8 +203,10 @@ menu a:hover .blue-bar {
 .info-icon {
     display: flex;
     border: solid 1px #D9D9D9;
-    width: 24px;
-    height: 24px;
+    min-width: 25px;
+    max-width: 25px;
+    min-height: 25px;
+    max-height: 25px;
     margin-right: 15px;
     justify-content: center;
     align-items: center;
@@ -819,10 +821,6 @@ footer div {
     }
 
     .info-icon {
-        min-width: 25px;
-        max-width: 25px;
-        min-height: 25px;
-        max-height: 25px;
         margin-right: 5px;
     }
     
